--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,67 @@
 body {
   font-size: 14px;
-  font-family: arial, sans-serif;
-  color: #000;
-  background: url(../img/tasol-logo.jpg) center top no-repeat fixed #fff ;
+  font-family: 'Special Elite', cursive; /*'Metamorphous', cursive;*/
+  background: #000
+}
+
+#bg {
+  background: url(../img/bg.png) center top no-repeat fixed #000 ;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .center {
   text-align: center
 }
 
+#links {
+  margin-top: 20px;
+}
 #links a {
-  color: #000;
+  color: #EABE15;
   font-weight: bold;
-  font-size:16px;
-  margin: 0 5px;
+  font-size: 20px;
+  padding: 10px;
+  margin: 0 20px;
+}
+
+/* make keyframes that tell the start state and the end state of our object */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+ 
+.fade-in {
+    opacity:0;  /* make things invisible upon start */
+    -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+ 
+    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+ 
+    -webkit-animation-duration:1s;
+    -moz-animation-duration:1s;
+    animation-duration:1s;
+}
+ 
+.fade-in.one {
+-webkit-animation-delay: 0.7s;
+-moz-animation-delay: 0.7s;
+animation-delay: 0.7s;
+}
+ 
+.fade-in.two {
+-webkit-animation-delay: 1.2s;
+-moz-animation-delay:1.2s;
+animation-delay: 1.2s;
+}
+ 
+.fade-in.three {
+-webkit-animation-delay: 1.6s;
+-moz-animation-delay: 1.6s;
+animation-delay: 1.6s;
 }
