--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 #bg {
-  background: url(../img/bg.png) center top no-repeat fixed #000 ;
+  background: url(../img/bg.png) center 40px no-repeat fixed #000 ;
   position: absolute;
   top: 0;
   left: 0;
@@ -14,19 +14,33 @@ body {
   height: 100%;
 }
 
+#logo {
+  background: transparent url(../img/tasologo_negro_transparente.png) center top no-repeat;
+  left: 0;
+  position: absolute;
+  top: 20px;
+  width: 100%;
+  height: 171px;
+}
+
 .center {
   text-align: center
 }
 
 #links {
-  margin-top: 20px;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
 }
 #links a {
-  color: #EABE15;
+  color: rgba(255, 255, 255, 0.85);
+  text-decoration:none;
   font-weight: bold;
   font-size: 20px;
   padding: 10px;
   margin: 0 20px;
+  text-shadow: 4px 2px 0 #000000;
 }
 
 
@@ -41,6 +55,10 @@ body {
   #bg {
     background-size: cover;
   }
+  
+   #logo {
+    background-size: 200px;
+  }
 
 }
  
@@ -51,6 +69,7 @@ body {
     margin: 0 5px;
     font-size: 16px;
   }
+  
 }
 
 @media (max-width: 480px) {
@@ -60,6 +79,7 @@ body {
     margin: 0;
     font-size: 14px;
   }
+ 
 }
 
 
